# simpleinterpreter

./: CMakeLists.txt  README.md
include/: Interpreter.h  Lexer.h  Nodes.h  Parser.h
src/: Interpreter.cpp  Lexer.cpp  Main.cpp  Nodes.cpp  Parser.cpp
test/: CMakeLists.txt  Interpreter_Test.cpp  Lexer_Test.cpp  Parser_test.cpp  Service_test.cpp
